--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Tejas Benibagde",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   },
